download packages for different arch.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
           mingw-w64-${{ matrix.target.arch }}-python
         msystem: ${{ matrix.target.msys2 }}
 
-    - run: install_packages.sh
+    - run: install_packages.sh ${{ matrix.target.msys2 }} ${{ matrix.target.arch }}
       shell: bash
 
     - name: Build Yosys package
