--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,8 +43,8 @@ jobs:
           mingw-w64-${{ matrix.target.arch }}-python
         msystem: ${{ matrix.target.msys2 }}
 
-    - run: ./install_packages.sh ${{ matrix.target.msys2 }} ${{ matrix.target.arch }}
-      shell: bash
+    # - run: ./install_packages.sh ${{ matrix.target.msys2 }} ${{ matrix.target.arch }}
+    #   shell: bash
 
     - name: Build Yosys package
       working-directory: mingw-w64-yosys
