--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,8 @@ jobs:
 
     - name: Install extra packages
       run: |
-        ./install_packages.sh ${{ matrix.target.msys2 }} ${{ matrix.target.arch }}
+        msystem=$(echo "${{ matrix.target.msys2 }}" | tr '[:upper:]' '[:lower:]')
+        ./install_packages.sh $msystem ${{ matrix.target.arch }}
 
     - name: Build Yosys package
       working-directory: mingw-w64-yosys
