--- a/mingw-w64-python-sby/PKGBUILD
+++ b/mingw-w64-python-sby/PKGBUILD
@@ -1,4 +1,4 @@
-_realname=sby
+_realname=python-sby
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver="0.31"
@@ -21,7 +21,7 @@ optdepends=(
 )
 makedepends=("git")
 source=(
-	"${_realname}::git+https://github.com/YosysHQ/${_realname}.git#tag=yosys-${pkgver}"
+	"${_realname}::git+https://github.com/YosysHQ/sby.git#tag=yosys-${pkgver}"
 )
 sha256sums=(
 	"SKIP"
