exit after pacman install.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,8 +53,8 @@ jobs:
         tries=0
         # Try building three times due to the arbitrary 'Bad address' error
         while [ $tries -lt 3 ]; do
-          makepkg-mingw --noconfirm --noprogressbar -sCLfc && exit 0
-          pacman -U --noconfirm mingw-w64-*-any.pkg.tar.*
+          makepkg-mingw --noconfirm --noprogressbar -sCLfc
+          pacman -U --noconfirm mingw-w64-*-any.pkg.tar.* && exit 0
           tries=$((tries+1))
         done
         exit 1
@@ -65,8 +65,8 @@ jobs:
         tries=0
         # Try building three times due to the arbitrary 'Bad address' error
         while [ $tries -lt 3 ]; do
-          makepkg-mingw --noconfirm --noprogressbar -sCLfc && exit 0
-          pacman -U --noconfirm mingw-w64-*-any.pkg.tar.*
+          makepkg-mingw --noconfirm --noprogressbar -sCLfc
+          pacman -U --noconfirm mingw-w64-*-any.pkg.tar.* && exit 0
           tries=$((tries+1))
         done
         exit 1
