--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,10 @@ name: 'build'
 
 on:
   push:
-  schedule:
-    - cron: '0 0 * * *'
-  workflow_dispatch:
+    branches:
+      - main
+    tags:
+      - '*'
 
 jobs:
 
@@ -78,25 +79,46 @@ jobs:
 
   release:
     needs:
-      - msys2
+      - msys2    
+    strategy:
+      matrix:
+        target: [
+          { msys2: MINGW32, arch: i686 },
+          { msys2: MINGW64, arch: x86_64}
+        ]
     runs-on: windows-latest
+    if: startsWith(github.ref, 'refs/tags/')
+
     steps:
       - uses: actions/download-artifact@v3
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            Release ${{ github.ref }}
+
       - name: Upload Yosys
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ github.event.release.upload_url }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: mingw-w64-yosys/mingw-w64-${{ matrix.target.arch }}-yosys-*.pkg.tar.zst
           asset_name: mingw-w64-${{ matrix.target.arch }}-yosys-latest-any.pkg.tar.zst
           asset_content_type: application/octet-stream
+
       - name: Upload SymbiYosys
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ github.event.release.upload_url }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: mingw-w64-python-sby/mingw-w64-${{ matrix.target.arch }}-python-sby-*.pkg.tar.zst
           asset_name: mingw-w64-${{ matrix.target.arch }}-python-sby-latest-any.pkg.tar.zst
           asset_content_type: application/octet-stream
