--- a/mingw-w64-yosys/PKGBUILD
+++ b/mingw-w64-yosys/PKGBUILD
@@ -69,7 +69,10 @@ package() {
   cd "${srcdir}/${_realname}"
   make DESTDIR="${pkgdir}" install
   
-	for _f in "${pkgdir}${MINGW_PREFIX}"/bin/*-script.py; do
-		sed -e '1 { s/^#!.*$// }' -i ${_f}
-	done
+  files=$(find "${pkgdir}${MINGW_PREFIX}"/bin -type f -name "*-script.py")
+  if [ -n "$files" ]; then
+	  for _f in "$files"; do
+		  sed -e '1 { s/^#!.*$// }' -i ${_f}
+	  done
+  fi
 }
