--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,7 +90,9 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
 
     steps:
-      - uses: actions/download-artifact@v3
+      - name: Download artifact
+        id: download_artifact
+        uses: actions/download-artifact@v3
 
       - name: Create Release
         id: create_release
@@ -102,6 +104,8 @@ jobs:
           release_name: Release ${{ github.ref }}
           body: |
             Release ${{ github.ref }}
+      
+      - run: ls -R ${{ steps.download_artifact.outputs.download_path }}
 
       - name: Upload Yosys
         uses: actions/upload-release-asset@v1
@@ -109,7 +113,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: mingw-w64-yosys/mingw-w64-${{ matrix.target.arch }}-yosys-*.pkg.tar.zst
+          asset_path: ${{ steps.download_artifact.outputs.download_path }}/mingw-w64-yosys/mingw-w64-${{ matrix.target.arch }}-yosys-*.pkg.tar.zst
           asset_name: mingw-w64-${{ matrix.target.arch }}-yosys-latest-any.pkg.tar.zst
           asset_content_type: application/octet-stream
 
@@ -119,6 +123,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: mingw-w64-python-sby/mingw-w64-${{ matrix.target.arch }}-python-sby-*.pkg.tar.zst
+          asset_path: ${{ steps.download_artifact.outputs.download_path }}/mingw-w64-python-sby/mingw-w64-${{ matrix.target.arch }}-python-sby-*.pkg.tar.zst
           asset_name: mingw-w64-${{ matrix.target.arch }}-python-sby-latest-any.pkg.tar.zst
           asset_content_type: application/octet-stream
