--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,13 +79,7 @@ jobs:
 
   release:
     needs:
-      - msys2    
-    strategy:
-      matrix:
-        target: [
-          { msys2: MINGW32, arch: i686 },
-          { msys2: MINGW64, arch: x86_64}
-        ]
+      - msys2
     runs-on: windows-latest
     if: startsWith(github.ref, 'refs/tags/')
 
@@ -107,14 +101,34 @@ jobs:
       
       - run: ls -R ${{ steps.download_artifact.outputs.download_path }}
 
+      - name: Upload Yosys x64
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ steps.download_artifact.outputs.download_path }}/mingw-w64-yosys/mingw-w64-x86_64-yosys-*.pkg.tar.zst
+          asset_name: mingw-w64-x86_64-yosys-latest-any.pkg.tar.zst
+          asset_content_type: application/octet-stream
+
+      - name: Upload SymbiYosys x64
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ steps.download_artifact.outputs.download_path }}/mingw-w64-python-sby/mingw-w64-x86_64-python-sby-*.pkg.tar.zst
+          asset_name: mingw-w64-x86_64-python-sby-latest-any.pkg.tar.zst
+          asset_content_type: application/octet-stream
+
       - name: Upload Yosys
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ steps.download_artifact.outputs.download_path }}/mingw-w64-yosys/mingw-w64-${{ matrix.target.arch }}-yosys-*.pkg.tar.zst
-          asset_name: mingw-w64-${{ matrix.target.arch }}-yosys-latest-any.pkg.tar.zst
+          asset_path: ${{ steps.download_artifact.outputs.download_path }}/mingw-w64-yosys/mingw-w64-i686-yosys-*.pkg.tar.zst
+          asset_name: mingw-w64-i686-yosys-latest-any.pkg.tar.zst
           asset_content_type: application/octet-stream
 
       - name: Upload SymbiYosys
@@ -123,6 +137,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ steps.download_artifact.outputs.download_path }}/mingw-w64-python-sby/mingw-w64-${{ matrix.target.arch }}-python-sby-*.pkg.tar.zst
-          asset_name: mingw-w64-${{ matrix.target.arch }}-python-sby-latest-any.pkg.tar.zst
+          asset_path: ${{ steps.download_artifact.outputs.download_path }}/mingw-w64-python-sby/mingw-w64-i686-python-sby-*.pkg.tar.zst
+          asset_name: mingw-w64-i686-python-sby-latest-any.pkg.tar.zst
           asset_content_type: application/octet-stream
