--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,6 +106,7 @@ jobs:
         run: |
           files=$(find ${{ steps.download_artifact.outputs.download_path }} -name '*.tar.zst')
           filenames=$(ls ${files} | xargs -n 1 basename)
+          echo "::set-output name=files::${files}"
 
       - name: Upload files
         id: upload
