--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,18 @@ jobs:
         msystem=$(echo "${{ matrix.target.msys2 }}" | tr '[:upper:]' '[:lower:]')
         ./install_packages.sh $msystem ${{ matrix.target.arch }}
 
+    - name: Build GHDL package
+      working-directory: mingw-w64-ghdl
+      run: |
+        tries=0
+        # Try building three times due to the arbitrary 'Bad address' error
+        while [ $tries -lt 3 ]; do
+          makepkg-mingw --noconfirm --noprogressbar -sCLfc
+          pacman -U --noconfirm mingw-w64-*-any.pkg.tar.* && exit 0
+          tries=$((tries+1))
+        done
+        exit 1
+
     - name: Build Yosys package
       working-directory: mingw-w64-yosys
       run: |
