--- a/mingw-w64-python-sby/PKGBUILD
+++ b/mingw-w64-python-sby/PKGBUILD
@@ -5,7 +5,7 @@ pkgver="0.41"
 pkgrel=1
 pkgdesc="Front-end for Yosys-based formal verification flows"
 arch=("any")
-mingw_arch=('mingw32' 'mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64')
 url="https://github.com/YosysHQ/sby"
 groups=("${MINGW_PACKAGE_PREFIX}-eda")
 license=("custom:ISC")
