--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,7 @@ jobs:
         # Try building three times due to the arbitrary 'Bad address' error
         while [ $tries -lt 3 ]; do
           makepkg-mingw --noconfirm --noprogressbar -sCLfc
-          pacman -U --noconfirm mingw-w64-ghdl-llvm*.pkg.tar.* && exit 0
+          pacman -U --noconfirm mingw-w64-*-ghdl-llvm*-any.pkg.tar.* && exit 0
           tries=$((tries+1))
         done
         exit 1
