add make dependency for yosys.

--- a/mingw-w64-yosys/PKGBUILD
+++ b/mingw-w64-yosys/PKGBUILD
@@ -25,6 +25,7 @@ depends=(
 )
 checkdepends=("${MINGW_PACKAGE_PREFIX}-iverilog")
 makedepends=(
+  "base-devel"
   "${MINGW_PACKAGE_PREFIX}-cc"
 )
 _ghdl_plugin_commit="0c4740a4f8f1e615cc587b3cd3849fa23a623862"
