try to bump the version of yosys to 0.51.

--- a/mingw-w64-yosys/PKGBUILD
+++ b/mingw-w64-yosys/PKGBUILD
@@ -2,7 +2,7 @@
 _realname=yosys
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.41
+pkgver=0.51
 pkgrel=1
 pkgdesc="A framework for RTL synthesis tools (mingw-w64)"
 arch=('any')
@@ -27,23 +27,24 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-iverilog")
 makedepends=(
   "base-devel"
   "${MINGW_PACKAGE_PREFIX}-cc"
+  "${MINGW_PACKAGE_PREFIX}-pkgconf"
 )
-_ghdl_plugin_commit="0c4740a4f8f1e615cc587b3cd3849fa23a623862"
+_ghdl_plugin_commit="a8c3018956833a1f551ebf2d597b357624f5fc2e"
 source=(
-  "https://github.com/YosysHQ/yosys/archive/${_realname}-${pkgver}.tar.gz"
-  "abc-${pkgver}.tar.gz::https://github.com/YosysHQ/yosys/releases/download/${_realname}-${pkgver}/abc.tar.gz"
+  "${_realname}-${pkgver}.tar.gz::https://github.com/YosysHQ/yosys/releases/download/v${pkgver}/yosys.tar.gz"
   "https://github.com/ghdl/ghdl-yosys-plugin/archive/${_ghdl_plugin_commit}/ghdl-yosys-plugin-${_ghdl_plugin_commit}.tar.gz"
   "0001-fix-runtime-error-on-msys2.patch"
 )
-sha256sums=('b0037d0a5864550a07a72ba81346e52a7d5f76b3027ef1d7c71b975d2c8bd2b2'
-            'e36bd37051a11bdc10494dc571c2ffe50325dab3298402a2697806f40eef6cb1'
-            '1c05d579f0799f027ede97adbc1283ad325ef8019614f9a3bca194997535176a'
+sha256sums=('72abcf81925fc7232cba25d190a48d7be5079569ec2ba233bac2bb116c383eea'
+            'a0e4bfa37164a8a34d34b4e805d78f08f8ea4cd29906dd0359e2443250df52d3'
             'SKIP')
 
 prepare() {
+  mkdir -p ${_realname}-${pkgver}
+  tar -xzf ${_realname}-${pkgver}.tar.gz -C ${_realname}-${pkgver}
+  
   cd ${_realname}-${_realname}-${pkgver}
   cp -r "${srcdir}/ghdl-yosys-plugin-${_ghdl_plugin_commit}"/src frontends/ghdl
-  cp -r "${srcdir}"/abc-yosys-* abc
   patch -Np1 -i "${srcdir}"/0001-fix-runtime-error-on-msys2.patch
 }
 
