--- a/mingw-w64-python-cocotb/PKGBUILD
+++ b/mingw-w64-python-cocotb/PKGBUILD
@@ -18,6 +18,7 @@ depends=(
 makedepends=("git"
   "${MINGW_PACKAGE_PREFIX}-python-pip"
   "${MINGW_PACKAGE_PREFIX}-python-wheel"
+  "${MINGW_PACKAGE_PREFIX}-python-setuptools"
 )
 source=(
 	"${_realname}::git+https://github.com/cocotb/cocotb.git"
@@ -42,5 +43,5 @@ package() {
   MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
   DISTUTILS_DEBUG=1 \
   ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-                          --root="${pkgdir}" --optimize=1 --skip-build
+                          --root="${pkgdir}" --optimize=1
 }
